--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
   <meta name="description" content="Privacy-first word & character counter. Dark theme, responsive, and fast — runs fully in your browser." />
   <meta property="og:title" content="Word Counter — Dark Theme" />
   <meta property="og:description" content="Privacy-first word & character counter. Dark theme, responsive, and fast — runs fully in your browser." />
+  <meta name="google-site-verification" content="ip6hFuT3QRrPqV5SdO3G16_pcvfchN61nsQbbiUcZWE" />
   <link rel="icon" href="favicon.svg" type="image/svg+xml">
   <!-- AdSense placeholder (replace ca-pub-XXX) -->
   <script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js?client=ca-pub-XXX" crossorigin="anonymous"></script>
